test/libsolidity/syntaxTests/nameAndTypeResolution/131_enum_implicit_conversion_is_not_okay_64.sol
contract test {
    enum ActionChoices { GoLeft, GoRight, GoStraight, Sit }
    constructor() {
        b = ActionChoices.Sit;
    }
    uint64 b;
}
// ----
// TypeError: (108-125): Type enum test.ActionChoices is not implicitly convertible to expected type uint64.
